@@ -6,11 +6,12 @@ import org.jabref.build.xjc.XjcTask
 plugins {
     id 'application'
 
-    id 'com.github.andygoossens.modernizer' version '1.9.2'
+    id 'com.github.andygoossens.modernizer' version '1.9.3'
 
     id 'me.champeau.jmh' version '0.7.2'
 
-    id 'org.javamodularity.moduleplugin' version '1.8.15'
+    // This is https://github.com/java9-modularity/gradle-modules-plugin/pull/282
+    id 'com.github.koppor.gradle-modules-plugin' version 'v1.8.15-cmd-1'
 
     id 'org.openjfx.javafxplugin' version '0.1.0'
 
@@ -28,7 +29,7 @@ plugins {
 
     id 'idea'
 
-    id 'org.openrewrite.rewrite' version '6.16.0'
+    id 'org.openrewrite.rewrite' version '6.16.4'
 }
 
 // Enable following for debugging
@@ -79,6 +80,8 @@ application {
         '--add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module',
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref.merged.module',
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref.merged.module',
+        // fix for https://github.com/JabRef/jabref/issues/11426
+        '--add-opens=javafx.controls/javafx.scene.control.skin=org.jabref.merged.module',
 
         // Fix for https://github.com/JabRef/jabref/issues/11225 on linux
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref',
@@ -116,9 +119,9 @@ sourceSets {
 
 repositories {
     mavenCentral()
-    maven { url 'https://oss.sonatype.org/content/groups/public' }
     maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
     maven { url 'https://jitpack.io' }
+    maven { url 'https://oss.sonatype.org/content/groups/public' }
     maven { url 'https://sandec.jfrog.io/artifactory/repo' }
 }
 
@@ -131,7 +134,7 @@ dependencyLocking {
 }
 
 javafx {
-    version = "22.0.1"
+    version = "22.0.2"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
 
@@ -155,7 +158,7 @@ dependencies {
         exclude group: 'commons-logging'
     }
 
-    def luceneVersion = "9.11.0"
+    def luceneVersion = "9.11.1"
     implementation "org.apache.lucene:lucene-core:$luceneVersion"
     implementation "org.apache.lucene:lucene-queryparser:$luceneVersion"
     implementation "org.apache.lucene:lucene-queries:$luceneVersion"
@@ -163,9 +166,10 @@ dependencies {
     implementation "org.apache.lucene:lucene-highlighter:$luceneVersion"
 
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.11.0'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.15.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
-    implementation 'com.h2database:h2-mvstore:2.2.224'
+    implementation 'commons-logging:commons-logging:1.3.3'
+    implementation 'com.h2database:h2-mvstore:2.3.230'
 
     // required for reading write-protected PDFs - see https://github.com/JabRef/jabref/pull/942#issuecomment-209252635
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
@@ -184,8 +188,8 @@ dependencies {
 
     implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '6.10.0.202406032230-r'
 
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.17.1'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.17.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
 
     implementation 'com.fasterxml:aalto-xml:1.3.3'
 
@@ -194,8 +198,8 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.3'
 
     // Support unix socket connection types
-    implementation 'com.kohlschutter.junixsocket:junixsocket-core:2.9.1'
-    implementation 'com.kohlschutter.junixsocket:junixsocket-mysql:2.9.1'
+    implementation 'com.kohlschutter.junixsocket:junixsocket-core:2.10.0'
+    implementation 'com.kohlschutter.junixsocket:junixsocket-mysql:2.10.0'
 
     implementation ('com.oracle.ojdbc:ojdbc10:19.3.0.0') {
         // causing module issues
@@ -217,14 +221,16 @@ dependencies {
     implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
     implementation 'com.github.sialcasa.mvvmFX:mvvmfx-validation:f195849ca9' //jitpack
     implementation 'de.saxsys:mvvmfx:1.8.0'
-    implementation('com.tobiasdiez:easybind:2.2.1-SNAPSHOT') {
+    implementation('org.jabref:easybind:2.2.1-SNAPSHOT') {
         exclude group: 'org.openjfx'
     }
     implementation 'org.fxmisc.flowless:flowless:0.7.3'
-    implementation 'org.fxmisc.richtext:richtextfx:0.11.2'
-    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.25.0') {
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'
+    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.32.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
+        exclude group: 'org.apache.commons.validator'
+        exclude group: 'org.apache.commons.commons-logging'
         exclude group: 'org.openjfx'
         exclude group: 'org.apache.logging.log4j'
         exclude group: 'tech.units'
@@ -234,13 +240,15 @@ dependencies {
 
     implementation 'org.controlsfx:controlsfx:11.2.1'
 
-    implementation 'org.jsoup:jsoup:1.17.2'
-    implementation 'com.konghq:unirest-java:3.14.5'
+    implementation 'org.jsoup:jsoup:1.18.1'
+    implementation 'com.konghq:unirest-java-core:4.4.4'
+    implementation 'com.konghq:unirest-modules-gson:4.4.4'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
 
     implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation "org.tinylog:tinylog-api:2.7.0"
-    implementation "org.tinylog:slf4j-tinylog:2.7.0"
-    implementation "org.tinylog:tinylog-impl:2.7.0"
+    implementation 'org.tinylog:tinylog-api:2.7.0'
+    implementation 'org.tinylog:slf4j-tinylog:2.7.0'
+    implementation 'org.tinylog:tinylog-impl:2.7.0'
 
     // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
     implementation 'org.slf4j:jul-to-slf4j:2.0.13'
@@ -277,7 +285,7 @@ dependencies {
     implementation 'org.glassfish.jersey.core:jersey-server:3.1.7'
     // injection framework
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.7'
-    implementation 'org.glassfish.hk2:hk2-api:3.1.0'
+    implementation 'org.glassfish.hk2:hk2-api:3.1.1'
     // testImplementation 'org.glassfish.hk2:hk2-testing:3.0.4'
     // implementation 'org.glassfish.hk2:hk2-testing-jersey:3.0.4'
     // testImplementation 'org.glassfish.hk2:hk2-junitrunner:3.0.4'
@@ -289,7 +297,7 @@ dependencies {
     // implementation 'org.glassfish.jersey.media:jersey-media-json-gson:3.1.1'
 
     // Because of GraalVM quirks, we need to ship that. See https://github.com/jspecify/jspecify/issues/389#issuecomment-1661130973 for details
-    implementation 'org.jspecify:jspecify:0.3.0'
+    implementation 'org.jspecify:jspecify:1.0.0'
 
     // parse plist files
     implementation 'com.googlecode.plist:dd-plist:1.28'
@@ -302,9 +310,9 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.16.1'
 
-    testImplementation 'io.github.classgraph:classgraph:4.8.173'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
+    testImplementation 'io.github.classgraph:classgraph:4.8.174'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
 
     testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.xmlunit:xmlunit-core:2.10.0'
@@ -320,7 +328,7 @@ dependencies {
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.12.0"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.15.0"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
@@ -489,6 +497,12 @@ run {
                 'javafx.controls/javafx.scene.control.skin' : 'org.controlsfx.controls',
                 'javafx.graphics/javafx.scene' : 'org.controlsfx.controls'
         ]
+
+        addModules = [
+                'jdk.incubator.vector'
+        ]
+
+        createCommandLineArgumentFile = true
     }
 
     if (project.hasProperty('component')){
@@ -532,7 +546,7 @@ testlogger {
     showStackTraces false
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
     reports.html.outputLocation.set(file("${reporting.baseDir}/${name}"))
     // Enable parallel tests (on desktop).
     // See https://docs.gradle.org/8.1/userguide/performance.html#execute_tests_in_parallel for details.
@@ -672,7 +686,7 @@ jlink {
     // but it was removed in the newer releases.
     // The pom.xml associated with such a non-modular artifact does not mention that the artifact depends on the removed code
     // (because the artifact was published when this code was still available in the JDK).
-    forceMerge "controlsfx", "bcprov", "jaxb", "istack", "stax", "log4j"
+    forceMerge "controlsfx", "bcprov", "jaxb", "istack", "stax"
 
     // TODO: Remove the following correction to the merged module
     // The module descriptor automatically generated by the plugin for the merged module contained some invalid entries.
@@ -712,12 +726,14 @@ jlink {
         requires 'jakarta.xml.bind'
         requires 'org.apache.commons.lang3'
         requires 'org.apache.commons.text'
+        requires 'org.apache.commons.logging';
         uses 'org.mariadb.jdbc.credential.CredentialPlugin'
         uses 'org.mariadb.jdbc.authentication.AuthenticationPlugin'
         uses 'org.mariadb.jdbc.tls.TlsSocketPlugin'
         uses 'org.mariadb.jdbc.LocalInfileInterceptor'
         uses 'org.eclipse.jgit.transport.SshSessionFactory'
         uses 'org.eclipse.jgit.lib.GpgSigner'
+        uses 'kong.unirest.core.json.JsonEngine';
         provides 'org.mariadb.jdbc.tls.TlsSocketPlugin' with 'org.mariadb.jdbc.internal.protocol.tls.DefaultTlsSocketPlugin'
         provides 'java.sql.Driver' with 'org.postgresql.Driver'
         provides 'org.mariadb.jdbc.authentication.AuthenticationPlugin' with 'org.mariadb.jdbc.internal.com.send.authentication.CachingSha2PasswordPlugin',
@@ -733,6 +749,8 @@ jlink {
                 'org.mariadb.jdbc.credential.system.PropertiesCredentialPlugin'
         provides 'java.security.Provider' with 'org.bouncycastle.jce.provider.BouncyCastleProvider',
                 'org.bouncycastle.pqc.jcajce.provider.BouncyCastlePQCProvider'
+        provides 'kong.unirest.core.json.JsonEngine' with 'kong.unirest.modules.gson.GsonEngine';
+
     }
 
     jpackage {
